tests/rosetta/transpiler/Scala/equilibrium-index.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/equilibrium-index.scala:34: error: not found: value seed
  seed = (seed * BigInt(1664525) + BigInt(1013904223)) % BigInt(2147483647)
  ^
/workspace/mochi/tests/rosetta/transpiler/Scala/equilibrium-index.scala:35: error: not found: value seed
  return seed % n
         ^
/workspace/mochi/tests/rosetta/transpiler/Scala/equilibrium-index.scala:64: error: not found: value seed
    seed = (seed * BigInt(1664525) + BigInt(1013904223)) % BigInt(2147483647)
    ^
/workspace/mochi/tests/rosetta/transpiler/Scala/equilibrium-index.scala:65: error: not found: value seed
    verylong = verylong :+ seed % BigInt(1001) - BigInt(500)
                           ^
four errors found
