tests/rosetta/transpiler/Scala/equilibrium-index.scala
// Generated by Mochi v0.10.55 on 2025-08-03 08:09:43 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
import scala.math.BigInt
import scala.collection.immutable.ListMap
object Main {
  private var _nowSeed: Long = 0L
  private var _nowSeeded: Boolean = false
  private def _now(): Int = {
    if (!_nowSeeded) {
      sys.env.get("MOCHI_NOW_SEED").foreach { s =>
      try { _nowSeed = s.toInt; _nowSeeded = true } catch { case _ : NumberFormatException => () }
    }
  }
  if (_nowSeeded) {
    _nowSeed = (_nowSeed * 1664525 + 1013904223) % 2147483647
    _nowSeed.toInt
  } else {
    Math.abs((System.nanoTime() / 1000).toInt)
  }
}

def toJson(value: Any, indent: Int = 0): String = value match {
  case m: scala.collection.Map[_, _] =>
  val items = ListMap(m.toSeq.sortBy(_._1.toString): _*).toSeq.map{ case (k,v) => "  "*(indent+1)+"\""+k.toString+"\": "+toJson(v, indent+1) }
  "{\n"+items.mkString(",\n")+"\n"+"  "*indent+"}"
  case s: Seq[_] =>
  val items = s.map(x => "  "*(indent+1)+toJson(x, indent+1))
  "[\n"+items.mkString(",\n")+"\n"+"  "*indent+"]"
  case s: String => "\""+s+"\""
  case other => other.toString
}

def randN(n: BigInt): BigInt = {
  seed = (seed * BigInt(1664525) + BigInt(1013904223)) % BigInt(2147483647)
  return seed % n
}

def eqIndices(xs: ArrayBuffer[BigInt]): ArrayBuffer[BigInt] = {
  var r: BigInt = BigInt(0)
  var i: BigInt = BigInt(0)
  while (i < BigInt(((xs).size).toInt)) {
    r = r + xs((i.toInt).toInt)
    i = i + BigInt(1)
  }
  var l: BigInt = BigInt(0)
  var eq: ArrayBuffer[BigInt] = ArrayBuffer()
  i = BigInt(0)
  while (i < BigInt(((xs).size).toInt)) {
    r = r - xs((i.toInt).toInt)
    if (l == r) {
      eq = eq :+ i
    }
    l = l + xs((i.toInt).toInt)
    i = i + BigInt(1)
  }
  return eq
}

def main(): Any = {
  println(eqIndices(ArrayBuffer(BigInt(0) - BigInt(7), BigInt(1), BigInt(5), BigInt(2), BigInt(0) - BigInt(4), BigInt(3), BigInt(0))))
  var verylong: ArrayBuffer[BigInt] = ArrayBuffer()
  var i: BigInt = BigInt(0)
  while (i < BigInt(10000)) {
    seed = (seed * BigInt(1664525) + BigInt(1013904223)) % BigInt(2147483647)
    verylong = verylong :+ seed % BigInt(1001) - BigInt(500)
    i = i + BigInt(1)
  }
  println(eqIndices(verylong))
}

var seed: BigInt = _now() % BigInt(2147483647)

def main(args: Array[String]): Unit = {
  {
    System.gc()
    val _startMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _start = _now()
    main()
    val _end = _now()
    System.gc()
    val _endMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _durUs = (_end - _start) / 1000
    var _memDiff = _endMem - _startMem
    if (_memDiff <= 0) _memDiff = _endMem
    println(toJson(scala.collection.immutable.Map("duration_us" -> _durUs, "memory_bytes" -> _memDiff, "name" -> "main")))
  }
}
}
